Update CSS and add Random Search Phrase

--- a/index.css
+++ b/index.css
@@ -16,6 +16,9 @@ body {
       justify-content: center;
       align-items: center;
   }
+  h1 {
+    text-align: center;
+  }
 .search-form{
     display: flex;
       flex-direction: column;
@@ -23,8 +26,7 @@ body {
       align-items: center;
 }
 .css-search{
-    max-width: 42rem;
-    min-width: 375px;
+    min-width: 325px;
     padding: .2em .5em;
     margin: .25em 0;
 }
@@ -137,10 +139,9 @@ ul{
   
   .text {
     color: lightgray;
-    font: {
-      size: 18px;
-      family: 'Open Sans', sans-serif;
-    }
+    font-size: 18px;
+     font-family: 'Open Sans', sans-serif;
+    
     text-align: center;
   }
   
