--- a/index.css
+++ b/index.css
@@ -19,6 +19,9 @@ body {
   h1 {
     text-align: center;
   }
+  h4 {
+    margin: 1rem 0;
+  }
 .search-form{
     display: flex;
       flex-direction: column;
@@ -59,13 +62,16 @@ input[type=text]{
     flex-direction: column;
     align-content: flex-start;
     border: 1px solid lightgray;
+    border-radius: 4px;
+    box-shadow:0px 3px 5px 1px lightgray;
     padding: 15px;
     font-size: 1rem;
     
 }
 .flex-container {
     max-width: 42rem;
-    min-width: 375px;
+    min-width: 325px;
+   
 }
 .user {
     color: blue;
@@ -79,7 +85,12 @@ li{
 ul{
     margin-top: -10px;
 }
-
+.result-item {
+  width: 100%;
+  border: 1px solid lightgray;
+  padding: .5rem;
+  border-radius: 4px;
+}
   /* LOADER---------------------------------------------------------------------- */
   .load {
     position: relative;
